<resources>
    <string name="app_name">Beer Distribution</string>
    <string name="shekveTebi">შეკვეთები</string>
    <string name="mitana">მიტანა</string>
    <string name="obj_realizacia">ობიექტების რეალიზაცია</string>
    <string name="day_realizacia">დღიური რეალიზაცია</string>
    <string name="ludsaxarshi">თბილისი</string>
    <string name="text_tarigi">თარიღი</string>
    <string name="shekvetis_damateba">შეკვეთის დამატება</string>
    <string name="_30litri">30ლ</string>
    <string name="minusi">-</string>
    <string name="pliusi">+</string>
    <string name="_50litri">50ლ</string>
    <string name="sxva_ludis_damateba">ლუდის სახეობის დამატება</string>
    <string name="dadastureba">შეყვანა</string>
    <string name="wamogebuli_kasrebi">წამოღებული კასრები</string>
    <string name="gadaxdili_tanxa">გადახდილი თანხა</string>
    <string name="default_0">0</string>
    <string name="gayidvebi">გაყიდვები</string>
    <string name="add_object">ობიექტის დამატება</string>
    <string name="add_user">მომხმარებლის დამატება</string>
    <string name="add_beer">ლუდის დამატება</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="logout">Log Out</string>
    <string name="dasaxeleba">დასახელება</string>
    <string name="username">მომხმარებელი</string>
    <string name="password">პაროლი</string>
    <string name="login">შესვლა</string>
    <string name="ludis_fasebi">ლუდის ფასები კონკრეტული ობიექტისთვის</string>
    <string name="call">call</string>
    <string name="m_edit">რედაქტირება</string>
    <string name="sak_piri">საკონტაქტო პირი</string>
    <string name="sk">ს/კ</string>
    <string name="info">ინფო</string>
    <string name="remove">სიიდან ამოღება</string>
    <string name="comment">კომენტარი</string>
    <string name="ludis_shetana">ლუდის შეტანა</string>
    <string name="distributorebi">დისტრიბუტორები</string>
    <string name="saxeli_gvari">სახელი გვარი</string>
    <string name="adress">მისამართი</string>
    <string name="tel">ტელ:</string>
    <string name="admin">ადმინ</string>
    <string name="confirn">გაიმეორეთ პაროლი</string>
    <string name="userslist">მომხმარებლები</string>
    <string name="change_pass">პაროლის შეცვლა</string>
    <string name="group">დაჯგუფება</string>
    <string name="vis">ვის დაევალოს</string>
    <string name="delete">წაშლა</string>
    <string name="saorient_fasi">საორენტიაციო ფასი</string>
    <string name="uaryofa">უარყოფა</string>
    <string name="lari">₾</string>
    <string name="mitana_title">მიტანა  30 / 50</string>
    <string name="shekveta_title">შეკვეთა  30 / 50</string>
    <string name="beer">ლუდი</string>
    <string name="obieqti">ობიექტი</string>
    <string name="ssysclear">სისტ. გაწმენდა</string>
    <string name="damimaxsovre">დამიმახსოვრე</string>
    <string name="chawera">ჩაწერა</string>
    <string name="sys_clean">სისტემის გაწმენდა</string>
    <string name="past_days">დღები</string>
    <string name="chanaweris_damateba">ჩანაწერის დამატება</string>
    <string name="drois_archeva">თარიღის შეცვლა</string>
    <string name="zveli_paroli">ძველი პაროლი</string>
    <string name="axali_paroli">ახალი პაროლი</string>

    <string name="curr_version">1.39</string>
    <string name="back">უკან</string>
    <string name="forward">წინ</string>
    <string name="sachuqari">საჩუქარი</string>
    <string name="sawyobi">საწყობი</string>
    <string name="savse">სავსე კასრები</string>
    <string name="nashti">ნაშთი *</string>
    <string name="chamotana">ჩამოტანა 30/50</string>
    <string name="carieli">ცარიელი კასრები</string>
    <string name="wageba">წაღება 30/50</string>
    <string name="detaluri">დეტალური</string>
    <string name="ufleba_false">არაგაქვთ ამ ოპერაციის განხორციელების უფლება</string>
    <string name="kasri_inout">რეალიზებული\nდაბრუნებული</string>
    <string name="_30_n30">30\n30</string>
    <string name="ganmarteba1">* (+ x ) ობიექტებზე დატოვებული კასრები</string>
    <string name="choose_color">ფერის არჩევა</string>
    <string name="patern_datetime">yyyy-MM-dd HH:mm</string>
    <string name="patern_date">yyyy-MM-dd</string>
    <string name="patern_date2">yyyy:MM:dd</string>
    <string name="davalianeba">დავალიანება</string>
    <string name="kasri">კასრი</string>
    <string name="price">ღირებულება</string>
    <string name="taken">აღებული</string>
    <string name="msg_noUserFile">can\'t find users file</string>
    <string name="msg_cantDelUserFile">can\'t delete users file</string>
    <string name="msg_enterKasrQuantity">შეავსეთ კასრების რაოდენობა</string>
    <string name="msg_orderAlreadyExist">ამ ობიექტზე უკვე არსებობს შეკვეთა! გთხოვთ განაახლოთ არსებული შეკვეთა</string>
    <string name="beerColor">ფერი</string>
    <string name="list">სია</string>
    <string name="logo">ლოგო</string>
    <string name="litri">ლიტრი</string>
    <string name="fields_request2">ორივე ველი აუცილებელია</string>
    <string name="feel_empty_fields">შეავსეთ ცარიელი ველები!</string>
    <string name="no_val_to_save">შეიყვანეთ მონაცემები</string>
    <string name="alredy_in_list">ეს ლუდის სახეობა უკვე დამატებულია სიაში!</string>
    <string name="no_edit_access">არაგაქვთ რედაქტირების უფლება!</string>
    <string name="xarjebi">ხარჯები</string>
    <string name="xelze_tanxa">ხელზე თანხა</string>
    <string name="odenoba">ოდენობა</string>
    <string name="add_xarji">ხარჯის დამატება</string>
    <string name="comments">კომენტარები</string>
    <string name="notif_text">სანახავად დააჭირეთ</string>
    <string name="notif_title">ახალი კომენტარი</string>
    <string name="loading_title">იტვირთება!</string>
    <string name="loading_text">დაელოდეთ…</string>

    <string name="location_en">tbilisi</string>
    <string name="location_ge">თბილისი</string>
    <string name="msg_not_editable">კახეთის აპლიკაციაში დაფიქსირებულ მონაცემები თბილისიდან არ იცვლება</string>
</resources>