<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_margin="8dp"
        android:textSize="@dimen/textsize_3"
        android:id="@+id/t_d_dasaxeleba"
        android:text="@string/dasaxeleba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="8dp"
        android:textSize="@dimen/textsize_3"
        android:id="@+id/t_d_sakpiri"
        android:text="@string/sak_piri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="8dp"
        android:textSize="@dimen/textsize_3"
        android:id="@+id/t_d_comment"
        android:text="@string/sk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>