<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_margin="8dp"
        android:textSize="@dimen/textsize_3"
        android:id="@+id/e_old_pass"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:hint="@string/zveli_paroli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_margin="8dp"
        android:textSize="@dimen/textsize_3"
        android:id="@+id/e_new_pass"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:hint="@string/axali_paroli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_margin="8dp"
        android:textSize="@dimen/textsize_3"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:id="@+id/e_new_pass2"
        android:hint="@string/confirn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>