<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kdiakonidze.beerapeni.AddEditBeer">

    <TextView
        android:id="@+id/t_addedit_beer"
        android:text="@string/sxva_ludis_damateba"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/textsize_4"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="51dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/e_beer_name"
        app:layout_constraintTop_toBottomOf="@+id/btn_beer_uaryofa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:errorEnabled="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp">
        <EditText
            android:hint="@string/dasaxeleba"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_beer_uaryofa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        android:text="@string/uaryofa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_beer_done"
        android:text="@string/pliusi"
        app:layout_constraintTop_toBottomOf="@+id/e_beer_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="296dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/e_beer_pr"
        app:layout_constraintTop_toBottomOf="@+id/e_beer_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_beer_done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp">
        <EditText
            android:hint="@string/saorient_fasi"
            android:inputType="numberSigned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <ListView
        android:id="@+id/listview_beer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_beer_pr"
        tools:layout_editor_absoluteX="0dp" />

</android.support.constraint.ConstraintLayout>
