<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kdiakonidze.beerapeni.SysClearActivity">


    <TextView
        android:id="@+id/t_sysclean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/textsize_3"
        android:text="@string/sys_clean"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.502" />

    <Spinner
        android:id="@+id/spinner_sysclean"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toLeftOf="@+id/btn_add_sysclean"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@+id/btn_add_sysclean"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add_sysclean"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btn_add_sysclean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chawera"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/t_sysclean" />

    <EditText
        android:id="@+id/e_cleaning_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_sysclean"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        android:hint="@string/comment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <LinearLayout
        android:id="@+id/linear_cleaning_titles"
        android:orientation="horizontal"
        android:background="@color/cardview_light_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_cleaning_comment"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/t_dasaxeleba_cleaning"
            android:layout_marginStart="8dp"
            android:background="@color/cardview_light_background"
            android:text="@string/dasaxeleba"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/t_tarigi_cleaning"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:text="@string/text_tarigi"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/t_pastday_cleaning"
            android:text="@string/past_days"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_sys_clean"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/linear_cleaning_titles"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
