<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kdiakonidze.beerapeni.OrdersActivity">

    <Button
        android:id="@+id/btn_addOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/shekvetis_damateba"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/t_tarigi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_tarigi"

        android:textSize="24sp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_addOrder"
        app:layout_constraintRight_toLeftOf="@+id/btn_setdate"
        app:layout_constraintVertical_bias="0.533" />

    <Button
        android:id="@+id/btn_setdate"
        android:text="თარიღი  "
        android:drawableEnd="@drawable/ic_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_addOrder"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp" />

    <CheckBox
        android:id="@+id/checkbox_order_group"
        android:text="@string/group"
        app:layout_constraintBottom_toBottomOf="@id/btn_setdate"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/lin_shek_list_titles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btn_setdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/t_obieqti_orderlist"
            android:text="ობიექტი"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="40"
            android:textColor="@color/colorForText" />

        <TextView
            android:text="ლუდი"
            android:textAlignment="center"
            android:id="@+id/t_ludi_orderlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:textColor="@color/colorForText" />

        <TextView
            android:text="მოთხოვ.\n 30 / 50 "
            android:textAlignment="center"
            android:id="@+id/t_k30wont_orderlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="18"
            android:textColor="@color/colorForText" />

        <TextView
            android:text="მიწოდ.\n 30 / 50 "
            android:textAlignment="center"
            android:id="@+id/t_k50wont_orderlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="18"
            android:textColor="@color/colorForText" />

    </LinearLayout>

    <ListView
        android:id="@+id/list_shekvetebi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/lin_shek_list_titles"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
